--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "reflect-metadata": "^0.1.0",
     "serve-favicon": "^2.3.0",
     "toml": "^2.2.3",
-    "vue": "^0.12.12"
+    "vue": "^0.12.12",
+    "vue-router": "^0.5.2"
   },
   "devDependencies": {
     "babel": "^5.8.23",
