--- a/package.json
+++ b/package.json
@@ -6,18 +6,18 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "angular2": "^2.0.0-alpha.30",
-    "body-parser": "^1.13.2",
+    "angular2": "^2.0.0-alpha.37",
+    "body-parser": "^1.13.3",
     "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
-    "express": "^4.13.1",
+    "express": "^4.13.3",
     "jade": "^1.11.0",
     "morgan": "^1.6.1",
     "react": "^0.13.3",
-    "reflect-metadata": "^0.1.0",
+    "reflect-metadata": "^0.1.1",
     "serve-favicon": "^2.3.0",
-    "toml": "^2.2.3",
-    "vue": "^0.12.12",
+    "toml": "^2.3.0",
+    "vue": "^0.12.14",
     "vue-router": "^0.5.2"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "gulp-sass": "^2.0.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
+    "gulp-util": "^3.0.6",
     "insert-css": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.12.37",
